--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="design.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="logo">IKIGO</a>
+            <br>
+            <ul class="nav-links">
+                <li> <a href="Home.html">Home</a> </li>
+                <li> <a href="About Me.html">About Me</a> </li>
+                <li> <a href="Contact Us.html">Contact Us</a> </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+    <div class="item">
+        <p>
+            <b>The beautiful journey of today can only begin when we learn to let go of yesterday</b> (Steve Maraboli)
+            <br>
+            This statement bears weight in each of our own lives. Our past is significant not only to the present
+            but also to the future. However, it does not define us. We ourselves are a collection of memories we 
+            have made, experiences we have had and predicaments that we have encountered. As a result, our behaviour
+            reflects these three aspects.
+            <br>
+            I believe that self-reflection is important because it takes into account
+            our memories, experiences and challenges. Reflection takes you into a deep dive of seeing what lies in 
+            you below the surface. It enables you to peel away layers and uncover truths that you have truly known 
+            all along. Our subconcious minds are awakened and strengthened resulting in unlocking of the true power 
+            that you hold within.
+            <br>
+            I invite you to travel on this journey with me as I dive deep to look withtin 
+            myself. Gaze into the mirror with me, as I reflect. I hope that this experience can empower you to stop
+            shying away from self-introspection and use self-reflection as a tool to empower your being. 
+         </p>
+    </div>
+    </div>
+    <footer>
+        <p>&copy; 2025 CSS Tutorial, All Rights Reserved</p>
+    </footer>
 </body>
 </html>
