--- a/index.html
+++ b/index.html
@@ -5,43 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="design.css">
+    <!-- Social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+ <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">IKIGO</a>
+            <div class="logo">MyPortfolio</div>
             <br>
             <ul class="nav-links">
-                <li> <a href="Home.html">Home</a> </li>
-                <li> <a href="About Me.html">About Me</a> </li>
-                <li> <a href="Contact Us.html">Contact Us</a> </li>
+                <li> <a href="index.html">Home</a> </li>
+                <li> <a href="About-Me.html">About Me</a> </li>
+                <li> <a href="Contact-Us.html">Contact Us</a> </li>
             </ul>
+            <div class="menu-icon">&#9776;</div>
         </div>
     </nav>
+<!-- Hero Section -->
+<header id="hero">
+    <div class="hero-content">
+       <h1>Welcome to my porfolio</h1>
+       <p>Learn more about me and what drives me</p>
+       <a href="index.html" class="btn">Start your experience</a>
+    </div>
+</header>
+ <!-- Main Section -->
     <div class="container">
-    <div class="item">
-        <p>
-            <b>The beautiful journey of today can only begin when we learn to let go of yesterday</b> (Steve Maraboli)
-            <br>
-            This statement bears weight in each of our own lives. Our past is significant not only to the present
-            but also to the future. However, it does not define us. We ourselves are a collection of memories we 
-            have made, experiences we have had and predicaments that we have encountered. As a result, our behaviour
-            reflects these three aspects.
-            <br>
-            I believe that self-reflection is important because it takes into account
-            our memories, experiences and challenges. Reflection takes you into a deep dive of seeing what lies in 
-            you below the surface. It enables you to peel away layers and uncover truths that you have truly known 
-            all along. Our subconcious minds are awakened and strengthened resulting in unlocking of the true power 
-            that you hold within.
-            <br>
-            I invite you to travel on this journey with me as I dive deep to look withtin 
-            myself. Gaze into the mirror with me, as I reflect. I hope that this experience can empower you to stop
-            shying away from self-introspection and use self-reflection as a tool to empower your being. 
-         </p>
+        <div class="item">
+            <p>
+                <b>The beautiful journey of today can only begin when we learn to let go of yesterday</b> (Steve Maraboli)
+            </p>
+        </div>
+        <div class="item">
+            <p>
+                This statement bears weight in each of our own lives. Our past is significant not only to the present
+                but also to the future. However, it does not define us. We ourselves are a collection of memories we 
+                have made, experiences we have had and predicaments that we have encountered. As a result, our behaviour
+                reflects these three aspects.
+                <br>
+                I believe that self-reflection is important because it takes into account
+                our memories, experiences and challenges. Reflection takes you into a deep dive of seeing what lies in 
+                you below the surface. It enables you to peel away layers and uncover truths that you have truly known 
+                all along. Our subconcious minds are awakened and strengthened resulting in unlocking of the true power 
+                that you hold within.
+                <br>
+                I invite you to travel on this journey with me as I dive deep to look withtin 
+                myself. Gaze into the mirror with me, as I reflect. I hope that this experience can empower you to stop
+                shying away from self-introspection and use self-reflection as a tool to empower your being. 
+             </p>
+        </div>
     </div>
+<!-- Footer -->
+<footer>
+    <div class="footer-container">
+    <div class="footer-column">
+       <h3>Quick Links</h3>
+          <ul>
+            <li> <a href="index.html">Home</a> </li>
+            <li> <a href="About-Me.html">About Me</a> </li>
+            <li> <a href="Contact-Us.html">Contact Us</a> </li>
+          </ul>
     </div>
-    <footer>
-        <p>&copy; 2025 CSS Tutorial, All Rights Reserved</p>
-    </footer>
+    <div class="footer-column">
+        <h3>Contact</h3>
+          <p>Email: sovereign.wawiye@gmail.com</p>
+          <p>Phone: +254701374708</p>
+    </div>
+    <!-- Social Media Links -->
+    <div class="footer-column">
+        <h3>Follow Us</h3>
+           <div class="social-links">
+             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+             <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+           </div>
+           <p class="footer-bottom">&copy; 2025 Sovereign's Porfolio | All Rights Reserved </p>
+    </div>
+</footer>
 </body>
 </html>
