--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -5,19 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="design.css">
+    <!-- Social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+ <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">IKIGO</a>
+            <div class="logo">MyPortfolio</div>
             <br>
             <ul class="nav-links">
-                <li> <a href="Home.html">Home</a> </li>
-                <li> <a href="About Me.html">About Me</a> </li>
-                <li> <a href="Contact Us.html">Contact Us</a> </li>
+                <li> <a href="index.html">Home</a> </li>
+                <li> <a href="About-Me.html">About Me</a> </li>
+                <li> <a href="Contact-Us.html">Contact Us</a> </li>
             </ul>
+            <div class="menu-icon">&#9776;</div>
         </div>
     </nav>
+<!-- Hero Section -->
+<header id="hero">
+    <div class="hero-content">
+       <h1>Welcome to my porfolio</h1>
+       <p>Learn more about me and what drives me</p>
+       <a href="index.html" class="btn">Start your experience</a>
+    </div>
+</header>
+<!-- Footer -->
+<footer>
+    <div class="footer-container">
+    <div class="footer-column">
+       <h3>Quick Links</h3>
+          <ul>
+            <li> <a href="index.html">Home</a> </li>
+            <li> <a href="About-Me.html">About Me</a> </li>
+            <li> <a href="Contact-Us.html">Contact Us</a> </li>
+          </ul>
+    </div>
+    <div class="footer-column">
+        <h3>Contact</h3>
+          <p>Email: sovereign.wawiye@gmail.com</p>
+          <p>Phone: +254701374708</p>
+    </div>
+    <!-- Social Media Links -->
+    <div class="footer-column">
+        <h3>Follow Us</h3>
+           <div class="social-links">
+             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+             <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+           </div>
+           <p class="footer-bottom">&copy; 2025 Sovereign's Porfolio | All Rights Reserved </p>
+    </div>
+</footer>
+<!--
     <div class="container">
         <p>
             <b>Why the name <i>IKIGO</i>?</b>
@@ -72,5 +111,6 @@
         <footer>
             <p>&copy; 2025 CSS Tutorial, All Rights Reserved</p>
         </footer>  
+-->
 </body>
 </html>
